; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/mountd/extr_mountd.c_compare_cred.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/mountd/extr_mountd.c_compare_cred.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xucred = type { i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xucred*, %struct.xucred*)* @compare_cred to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compare_cred(%struct.xucred* %0, %struct.xucred* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.xucred*, align 8
  %5 = alloca %struct.xucred*, align 8
  store %struct.xucred* %0, %struct.xucred** %4, align 8
  store %struct.xucred* %1, %struct.xucred** %5, align 8
  %6 = load %struct.xucred*, %struct.xucred** %4, align 8
  %7 = getelementptr inbounds %struct.xucred, %struct.xucred* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.xucred*, %struct.xucred** %5, align 8
  %10 = getelementptr inbounds %struct.xucred, %struct.xucred* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %8, %11
  br i1 %12, label %21, label %13

13:                                               ; preds = %2
  %14 = load %struct.xucred*, %struct.xucred** %4, align 8
  %15 = getelementptr inbounds %struct.xucred, %struct.xucred* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.xucred*, %struct.xucred** %5, align 8
  %18 = getelementptr inbounds %struct.xucred, %struct.xucred* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %16, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %13, %2
  store i32 1, i32* %3, align 4
  br label %33

22:                                               ; preds = %13
  %23 = load %struct.xucred*, %struct.xucred** %4, align 8
  %24 = getelementptr inbounds %struct.xucred, %struct.xucred* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 8
  %26 = load %struct.xucred*, %struct.xucred** %5, align 8
  %27 = getelementptr inbounds %struct.xucred, %struct.xucred* %26, i32 0, i32 2
  %28 = load i32, i32* %27, align 8
  %29 = load %struct.xucred*, %struct.xucred** %4, align 8
  %30 = getelementptr inbounds %struct.xucred, %struct.xucred* %29, i32 0, i32 1
  %31 = load i64, i64* %30, align 8
  %32 = call i32 @COMPARE_ARRAYS(i32 %25, i32 %28, i64 %31)
  br label %33

33:                                               ; preds = %22, %21
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @COMPARE_ARRAYS(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
